--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -169,7 +169,14 @@ section {
     align-items: center;
     justify-content: center;
 
-    width: 50px; height: 50px;
+    width: 33px; height: 33px;
+    @include _768 {
+        width: 40px; height: 40px;
+    }
+    
+    @include _992 {
+        width: 50px; height: 50px;
+    }
 
     border-radius: 50%;
     border: 1px solid #E95F7E;
@@ -199,9 +206,13 @@ section {
     }
 
     &::after {
-        font-size: 12px;
+        font-size: 8px;
         font-weight: 900;
         color: var(--white);
+
+        @include _768 {
+            font-size: 12px;
+        }
         
         transition: color .2s ease-in-out;
     }
