--- a/app/scss/_form.scss
+++ b/app/scss/_form.scss
@@ -46,6 +46,7 @@
         color: #CECECE;
         -webkit-appearance: none;
         -moz-appearance: none;
+        text-align: left;
         &:focus {
             color: #222222;
         }
