--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -18,6 +18,7 @@ $containerLarge: 1500 + ($containerPadding * 2);
 
     --white: #FFF;
     --black: #000;
+    --border-color: #F1D3C7;
 
     --container-padding: 15px;
 }
