--- a/app/scss/pages/about-us/_main.scss
+++ b/app/scss/pages/about-us/_main.scss
@@ -182,7 +182,7 @@
 
         &--body {
             padding: 3px;
-            background: var(--white);
+            background: var(--border-color);
             border-radius: 5px;
 
             @media (min-width: 500px) {
