--- a/app/scss/pages/category/_main.scss
+++ b/app/scss/pages/category/_main.scss
@@ -71,6 +71,7 @@
         padding: 40px 30vw 40px 0;
         margin: -40px 0 0px 0;
         overflow: visible;
+
         @media (min-width: 500px) {
             padding: 40px 30px 0px 0;
         }
@@ -184,7 +185,7 @@
         &--body {
             box-shadow: 0px 10px 25px rgba(114, 114, 114, 0.1);
             border-radius: 10px;
-            background: var(--white);
+            background: var(--border-color);
             padding: 5px;
         }
 
@@ -283,7 +284,7 @@
             flex: 0 0 28px;
             width: 28px; height: 28px;
             border-radius: 50%;
-            background: #296E50;
+            background:#6E2929;
 
             display: flex;
             align-items: center;
@@ -364,7 +365,12 @@
 
             @media (min-width: 1200px) {
                 padding: 0 30px;
+                /* &._none-padding {
+                    padding: 0 0 0 30px;
+                } */
             }
+
+
         }
 
         // .category__menu--fieldset
@@ -375,6 +381,10 @@
                 margin-top: 0;
                 &:not(:first-child) {
                     margin-top: 14px;
+                    
+                }
+                &._mt {
+                    margin-top: 38px;
                 }
             }
             
@@ -385,12 +395,21 @@
         &--legend {
             font-weight: 600;
             font-size: 1.5625rem;
+            &._min {
+                font-size: 1.5625rem;
+            }
             @include _768 {
                 font-size: 1.875rem;
+                &._min {
+                    font-size: 1.5625rem;
+                }
             }
             
             @include _992 {
                 font-size: 2.1875rem;
+                &._min {
+                    font-size: 1.5625rem;
+                }
             }
             line-height: 129%;
 
@@ -507,35 +526,13 @@
 
         display: none;
 
+        &._mt {
+            margin-top: 38px;
+        }
+
         @include _992 {
             display: grid;
-            min-height: 100%;
-            
-            &._type-1 {
-                grid-template-columns: 100%;
-                margin: 0 -9px;
-            }
-
-            &._type-1 &--item-body {
-                min-height: 100%;
-            }
-
-            &._type-2 {
-                grid-template-columns: 1fr 1fr;
-                margin: 0 -9px;
-            }
-
-            &._type-2 &--item-body {
-                min-height: 100%;
-            }
-
-            &._type-2 &--item:nth-child(1) {
-                grid-row: 1/3; grid-column: 1/1;
-            }
-
-            &._type-2 &--item:nth-child(1) &--item-body {
-                min-height: 100%;
-            }
+            grid-template-columns: 1fr 1fr;
         }
 
         // .category__gallery--item
@@ -547,10 +544,9 @@
         // .category__gallery--item-body
 
         &--item-body {
-            width: 100%; //padding-top: 100%;
+            width: 100%; padding-top: 150%;
             position: relative;
-            background: var(--white);
-            background: #FFFFFF;
+            background: var(--border-color);
             border-radius: 5px;
         }
 
