--- a/app/scss/pages/service/_main.scss
+++ b/app/scss/pages/service/_main.scss
@@ -62,8 +62,6 @@
             grid-template-columns: 24% 33% 43%;
         }
 
-        
-
         // .service__gallery--item
 
         &--item {
@@ -133,7 +131,7 @@
             left: 0; top: 0;
             width: 100%; height: 100%;
             padding: 5px;
-            background: #FFFFFF;
+            background: var(--border-color);
             border-radius: 5px;
             & img {
                 width: 100%; height: 100%;
