--- a/app/scss/main-sections/_header.scss
+++ b/app/scss/main-sections/_header.scss
@@ -29,7 +29,7 @@
     }
 
     &__logo {
-        max-width: 101px;
+        max-width: 135px;
 
         position: relative;
         z-index: 2;
@@ -42,7 +42,6 @@
     &__container {
         display: flex;
         justify-content: space-between;
-        //flex-wrap: wrap;
         align-items: center;
     }
 
@@ -179,14 +178,15 @@
             width: 20px; height: 20px;
             margin-right: 5px;
             @media (min-width: 1150px) {
-                width: 30px; height: 30px;
-                margin-right: 10px;
+                width: 25px; height: 25px;
             }
 
             border-radius: 50%;
             background: var(--light);
 
-           
+            & img {
+                width: 100%;
+            }
         }
 
         &--select {
