--- a/app/scss/pages/buffet/_main.scss
+++ b/app/scss/pages/buffet/_main.scss
@@ -99,9 +99,10 @@
         // .buffet__card--body
 
         &--body {
-            padding: 5px;
+            
             background: #FFFFFF;
             border-radius: 5px;
+            border: 5px solid var(--border-color);
 
             min-height: 100%;
 
@@ -131,6 +132,7 @@
         &--slider-image {
             width: 100%; padding-top: 100%;
             position: relative;
+            border-radius: 5px;
             
             & img {
                 position: absolute;
